@@ -1911,11 +1911,13 @@ SEXP R_igraph_growing_random_game(SEXP pn, SEXP pm, SEXP pdirected,
   return result;  
 }
 
-SEXP R_igraph_shortest_paths(SEXP graph, SEXP pvids, SEXP pmode, SEXP weights) {
+SEXP R_igraph_shortest_paths(SEXP graph, SEXP pvids, SEXP pmode, SEXP weights, 
+			     SEXP palgo) {
   
   igraph_t g;
   igraph_vs_t vs;
   igraph_integer_t mode=REAL(pmode)[0];
+  long int algo=REAL(palgo)[0];
   igraph_matrix_t res;
   igraph_vector_t w, *pw=&w;
   igraph_bool_t negw=0;
@@ -1932,12 +1934,29 @@ SEXP R_igraph_shortest_paths(SEXP graph, SEXP pvids, SEXP pmode, SEXP weights) {
     negw = igraph_vector_min(&w) < 0;
   }
   igraph_matrix_init(&res, 0, 0);
-  if (negw && mode==IGRAPH_OUT && GET_LENGTH(pvids)>100) {
-    igraph_shortest_paths_johnson(&g, &res, vs, pw);
-  } else if (negw) {
-    igraph_shortest_paths_bellman_ford(&g, &res, vs, pw, mode);
-  } else {
+  switch (algo) {
+  case 0: 			/* automatic */
+    if (negw && mode==IGRAPH_OUT && GET_LENGTH(pvids)>100) {
+      igraph_shortest_paths_johnson(&g, &res, vs, pw);
+    } else if (negw) {
+      igraph_shortest_paths_bellman_ford(&g, &res, vs, pw, mode);
+    } else {
+      /* This one chooses 'unweighted' if there are no weights */
+      igraph_shortest_paths_dijkstra(&g, &res, vs, pw, mode);
+    }
+    break;
+  case 1:			/* unweighted */
+    igraph_shortest_paths(&g, &res, vs, mode);
+    break;
+  case 2:			/* dijkstra */
     igraph_shortest_paths_dijkstra(&g, &res, vs, pw, mode);
+    break;
+  case 3:			/* bellman-ford */
+    igraph_shortest_paths_bellman_ford(&g, &res, vs, pw, mode);
+    break;
+  case 4:			/* johnson */
+    igraph_shortest_paths_johnson(&g, &res, vs, pw);
+    break;
   }
   PROTECT(result=R_igraph_matrix_to_SEXP(&res));
   igraph_matrix_destroy(&res);
